--- a/ch02/01_main-chapter-code/ch02.ipynb
+++ b/ch02/01_main-chapter-code/ch02.ipynb
@@ -49,7 +49,7 @@
       ],
       "metadata": {
         "id": "mMhxTQyQBbJH",
-        "outputId": "575df31f-4bfb-4fff-ef50-6df4fa4ccd1d",
+        "outputId": "00221996-5d70-463b-b0ba-18ad7bedab5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -61,7 +61,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.2 MB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.5/1.2 MB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.2/1.2 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m19.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m13.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -86,7 +86,7 @@
       "id": "4d1305cf-12d5-46fe-a2c9-36fb71c5b3d3",
       "metadata": {
         "id": "4d1305cf-12d5-46fe-a2c9-36fb71c5b3d3",
-        "outputId": "2184138c-a5de-4938-9aa2-943ed2122ee8",
+        "outputId": "5f079a1b-109a-4dac-9ec5-bfe5235fa53e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -96,8 +96,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch version: 2.5.1+cu121\n",
-            "tiktoken version: 0.8.0\n"
+            "torch version: 2.5.1+cu124\n",
+            "tiktoken version: 0.9.0\n"
           ]
         }
       ],
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "40f9d9b1-6d32-485a-825a-a95392a86d79",
       "metadata": {
         "id": "40f9d9b1-6d32-485a-825a-a95392a86d79"
@@ -262,14 +262,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "8a769e87-470a-48b9-8bdb-12841b416198",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8a769e87-470a-48b9-8bdb-12841b416198",
-        "outputId": "727e428f-f9e4-4e8a-fd1f-1449d892bff4"
+        "outputId": "9f182a84-801c-4601-dce4-860fe8b01ec4"
       },
       "outputs": [
         {
@@ -306,14 +306,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
-        "outputId": "a2bf2544-d9b3-411e-b290-a8d78b6c623a"
+        "outputId": "2efa16c8-ca5f-40f5-b65f-5e02ee56896a"
       },
       "outputs": [
         {
@@ -351,22 +351,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
-        "outputId": "cba3d877-27c0-441b-8efa-d278094e6a34"
+        "outputId": "0583417d-6f6e-4048-faa8-f3cf2cea459b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Hello', ',', '', ' ', 'do', ' ', 'you', ' ', 'like', ' ', 'tea?', ' ', '<|endoftext|>', ' ', 'In', ' ', 'the', ' ', 'sunlit', ' ', 'terracesof', ' ', 'someunknownPlace', '.', '']\n",
-            "['Hello', ',', '', ' ', 'do', ' ', 'you', ' ', 'like', ' ', 'tea?', ' ', '<|endoftext|>', ' ', 'In', ' ', 'the', ' ', 'sunlit', ' ', 'terracesof', ' ', 'someunknownPlace', '.', '']\n"
+            "['Hello', ',', '', ' ', 'world', '.', '', ' ', 'This', ',', '', ' ', 'is', ' ', 'a', ' ', 'test', '.', '']\n",
+            "['Hello', ',', '', ' ', 'world', '.', '', ' ', 'This', ',', '', ' ', 'is', ' ', 'a', ' ', 'test', '.', '']\n"
           ]
         }
       ],
@@ -391,11 +391,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "4d8a6fb7-2e62-4a12-ad06-ccb04f25fed7",
       "metadata": {
         "id": "4d8a6fb7-2e62-4a12-ad06-ccb04f25fed7",
-        "outputId": "a8c45ed0-cab6-49f7-e572-a3ecf080f5a2",
+        "outputId": "c615f928-80cb-4bc3-d919-362e76bc5d5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -427,10 +427,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fiEGrRriw1Vi",
-        "outputId": "ead2d59d-90c9-49c3-8d53-3f37b07b4cf8"
+        "outputId": "0cf170d8-8159-41c2-f9b5-efb6c1dc2d18"
       },
       "id": "fiEGrRriw1Vi",
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -463,14 +463,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "ed3a9467-04b4-49d9-96c5-b8042bcf8374",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ed3a9467-04b4-49d9-96c5-b8042bcf8374",
-        "outputId": "68f880d6-f9d3-446b-acf6-4345e974441f"
+        "outputId": "b0d7c9b4-964f-4d28-9165-a82587ff1520"
       },
       "outputs": [
         {
@@ -503,10 +503,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jvEUThxs6TeZ",
-        "outputId": "5eb40387-2f4d-4fa3-c05a-bafb2ec96f7b"
+        "outputId": "03782e1c-1225-4390-ea72-95ca0be9c242"
       },
       "id": "jvEUThxs6TeZ",
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,14 +541,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
-        "outputId": "12d996c0-d659-4f44-edcc-764ad73b6d70"
+        "outputId": "951e4fcd-608e-4986-b91d-168101644598"
       },
       "outputs": [
         {
@@ -580,11 +580,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "35db7b5e-510b-4c45-995f-f5ad64a8e19c",
       "metadata": {
         "id": "35db7b5e-510b-4c45-995f-f5ad64a8e19c",
-        "outputId": "31407892-d506-47b5-fd73-fdb79e327375",
+        "outputId": "acf0aee4-ad9f-4d19-8ead-388b9dace802",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -644,14 +644,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
-        "outputId": "6bb56023-6df8-49e6-9d9c-78866c01a852"
+        "outputId": "3310ed5c-840a-4c56-a37a-a4589f78d93c"
       },
       "outputs": [
         {
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "77d00d96-881f-4691-bb03-84fec2a75a26",
       "metadata": {
         "id": "77d00d96-881f-4691-bb03-84fec2a75a26"
@@ -694,14 +694,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
-        "outputId": "14a5f248-4520-480e-9084-2b279cb16a6c"
+        "outputId": "c7b3f235-fe2b-46aa-da5d-345de2c47c2a"
       },
       "outputs": [
         {
@@ -824,7 +824,7 @@
         "\n",
         "    def decode(self, ids):  # Converts token IDs back into text\n",
         "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
-        "        # Remove spaces before the specified punctuations\n",
+        "        # Remove spaces (that attached before them as \" \".join() specified a space) before the specified punctuations\n",
         "        '''\n",
         "        re.sub(): This function searches for a pattern in a string and replaces it with a specified replacement.\n",
         "\n",
@@ -832,7 +832,7 @@
         "\n",
         "        \\s+: Matches one or more whitespace characters.\n",
         "        ([,.?!\"()\\']): Matches any of the punctuation marks inside the parentheses. The parentheses create a capturing group, which we'll refer to later.\n",
-        "        r'([,.:;?_!\"()\\']|--|\\s)' means one or more whitespace characters followed by one of the specified punctuation marks.\n",
+        "        r'\\s+([,.?!\"()\\'])' means one or more whitespace characters followed by one of the specified punctuation marks.\n",
         "        r'\\1': This is the replacement string. The \\1 refers to the first capturing group in the search pattern. In this case, it represents the punctuation mark that was matched.\n",
         "\n",
         "        text: This is the input string where the substitution will be performed.\n",
