--- a/ch02/01_main-chapter-code/ch02.ipynb
+++ b/ch02/01_main-chapter-code/ch02.ipynb
@@ -801,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5",
       "metadata": {
         "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5"
@@ -875,14 +875,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "647364ec-7995-4654-9b4a-7607ccf5f1e4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "647364ec-7995-4654-9b4a-7607ccf5f1e4",
-        "outputId": "a216e387-ce05-4200-e6c9-bac8b1d0126d"
+        "outputId": "7e7fe934-9c30-4122-b504-a330d128e231"
       },
       "outputs": [
         {
@@ -914,7 +914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "01d8c8fb-432d-4a49-b332-99f23b233746",
       "metadata": {
         "colab": {
@@ -922,7 +922,7 @@
           "height": 35
         },
         "id": "01d8c8fb-432d-4a49-b332-99f23b233746",
-        "outputId": "1576eac7-7320-452d-bc51-52d0accabe31"
+        "outputId": "a1181c34-6399-46d2-b576-32a6eae85346"
       },
       "outputs": [
         {
@@ -936,7 +936,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 21
         }
       ],
       "source": [
@@ -945,11 +945,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "54f6aa8b-9827-412e-9035-e827296ab0fe",
       "metadata": {
         "id": "54f6aa8b-9827-412e-9035-e827296ab0fe",
-        "outputId": "30685f55-df4e-4221-f1ee-67c087ea789c",
+        "outputId": "4aeb7eed-3a64-49f5-ddfc-7a4e6cafcef4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -967,7 +967,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 22
         }
       ],
       "source": [
@@ -1057,15 +1057,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "d5767eff-440c-4de1-9289-f789349d6b85",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 329
+          "height": 321
         },
         "id": "d5767eff-440c-4de1-9289-f789349d6b85",
-        "outputId": "ded14322-42eb-4581-f346-816539cfdfde"
+        "outputId": "998ba4b2-8edf-4a3b-f33a-4bb2d9a28bfe"
       },
       "outputs": [
         {
@@ -1075,9 +1075,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-d80f9ff7dada>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Hello, do you like tea. Is this-- a test?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-15-6387677f6488>\u001b[0m in \u001b[0;36mencode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# stripping whithespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# converrting tokens to ID's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-15-6387677f6488>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# stripping whithespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# converrting tokens to ID's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-23-b851b8590639>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Hello, do you like tea. Is this-- a test?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERROR we don't have the word 'Hello' in our mapping\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-19-ae2255050a16>\u001b[0m in \u001b[0;36mencode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# stripping whithespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# converrting tokens to ID's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-19-ae2255050a16>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# stripping whithespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# converrting tokens to ID's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyError\u001b[0m: 'Hello'"
           ]
         }
@@ -1104,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "ce9df29c-6c5b-43f1-8c1a-c7f7b79db78f",
       "metadata": {
         "id": "ce9df29c-6c5b-43f1-8c1a-c7f7b79db78f"
@@ -1112,21 +1112,21 @@
       "outputs": [],
       "source": [
         "all_tokens = sorted(list(set(preprocessed)))\n",
-        "all_tokens.extend([\"<|endoftext|>\", \"<|unk|>\"])\n",
+        "all_tokens.extend([\"<|endoftext|>\", \"<|unk|>\"])  # Add some special characters\n",
         "\n",
         "vocab = {token:integer for integer,token in enumerate(all_tokens)}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "57c3143b-e860-4d3b-a22a-de22b547a6a9",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "57c3143b-e860-4d3b-a22a-de22b547a6a9",
-        "outputId": "04884268-7f44-4d0c-e414-f87a91410b74"
+        "outputId": "3a61297f-9541-4df0-a00d-043a97e7f9cd"
       },
       "outputs": [
         {
@@ -1137,7 +1137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 25
         }
       ],
       "source": [
@@ -1146,11 +1146,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "50e51bb1-ae05-4aa8-a9ff-455b65ed1959",
       "metadata": {
         "id": "50e51bb1-ae05-4aa8-a9ff-455b65ed1959",
-        "outputId": "8a62e8e8-d404-4e1c-f6b9-62b39660e832",
+        "outputId": "ef81d117-fe8e-4998-f459-74659486698a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1185,7 +1185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "948861c5-3f30-4712-a234-725f20d26f68",
       "metadata": {
         "id": "948861c5-3f30-4712-a234-725f20d26f68"
@@ -1227,14 +1227,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "4133c502-18ac-4412-9f43-01caf4efa3dc",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4133c502-18ac-4412-9f43-01caf4efa3dc",
-        "outputId": "b3311168-406d-4871-a81e-9c53191f4168"
+        "outputId": "14a483e7-45d9-4ed9-869d-9066b2a8c20a"
       },
       "outputs": [
         {
@@ -1258,14 +1258,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "7ed395fe-dc1b-4ed2-b85b-457cc35aab60",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ed395fe-dc1b-4ed2-b85b-457cc35aab60",
-        "outputId": "efc3a52a-b73c-4aa3-9aae-98f8477d920c"
+        "outputId": "cb994a43-b980-45c8-ac5c-1d39d50eeab2"
       },
       "outputs": [
         {
@@ -1276,7 +1276,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 29
         }
       ],
       "source": [
@@ -1285,7 +1285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "059367f9-7a60-4c0d-8a00-7c4c766d0ebc",
       "metadata": {
         "colab": {
@@ -1293,7 +1293,7 @@
           "height": 35
         },
         "id": "059367f9-7a60-4c0d-8a00-7c4c766d0ebc",
-        "outputId": "f3779d40-1957-4402-aeb3-127fedaa0ae2"
+        "outputId": "dfc8c8f1-dade-4374-985c-1e1ebd8205b9"
       },
       "outputs": [
         {
@@ -1307,7 +1307,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 30
         }
       ],
       "source": [
@@ -1393,23 +1393,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "6ad3312f-a5f7-4efc-9d7d-8ea09d7b5128",
       "metadata": {
         "id": "6ad3312f-a5f7-4efc-9d7d-8ea09d7b5128"
       },
       "outputs": [],
       "source": [
-        "tokenizer = tiktoken.get_encoding(\"gpt2\")"
+        "tokenizer = tiktoken.get_encoding(\"gpt2\")  # without definig a class, we have a tokenizer that can encode and decode"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "5ff2cd85-7cfb-4325-b390-219938589428",
       "metadata": {
         "id": "5ff2cd85-7cfb-4325-b390-219938589428",
-        "outputId": "cfa0c377-c80f-4b6a-c5da-22b5667b73cc",
+        "outputId": "918c43aa-0110-4fce-bcbb-5769f17b68d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1429,18 +1429,18 @@
         "     \"of someunknownPlace.\"\n",
         ")\n",
         "\n",
-        "integers = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})\n",
+        "integers = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})  # encode the text\n",
         "\n",
         "print(integers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "id": "d26a48bb-f82e-41a8-a955-a1c9cf9d50ab",
       "metadata": {
         "id": "d26a48bb-f82e-41a8-a955-a1c9cf9d50ab",
-        "outputId": "70fdbeac-bc84-4e3b-9b59-71b5ccd76ede",
+        "outputId": "517d1c12-bc02-41fa-8e37-6c7d08b051c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1455,7 +1455,7 @@
         }
       ],
       "source": [
-        "strings = tokenizer.decode(integers)\n",
+        "strings = tokenizer.decode(integers)  # decode the encoding text\n",
         "\n",
         "print(strings)"
       ]
@@ -1512,11 +1512,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "848d5ade-fd1f-46c3-9e31-1426e315c71b",
       "metadata": {
         "id": "848d5ade-fd1f-46c3-9e31-1426e315c71b",
-        "outputId": "21980bf5-7acc-4e03-d869-0eb2ea25a55e",
+        "outputId": "a523cabd-382b-4f07-b597-515d1cc27e55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1551,7 +1551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "id": "e84424a7-646d-45b6-99e3-80d15fb761f2",
       "metadata": {
         "id": "e84424a7-646d-45b6-99e3-80d15fb761f2"
@@ -1565,11 +1565,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "dfbff852-a92f-48c8-a46d-143a0f109f40",
       "metadata": {
         "id": "dfbff852-a92f-48c8-a46d-143a0f109f40",
-        "outputId": "c0eb8167-48db-4062-ea15-d79a8a886451",
+        "outputId": "a89a1705-d646-405c-c4b0-06e0dac0380a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1606,11 +1606,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "d97b031e-ed55-409d-95f2-aeb38c6fe366",
       "metadata": {
         "id": "d97b031e-ed55-409d-95f2-aeb38c6fe366",
-        "outputId": "ea13c295-b6da-416f-8e27-1a4778e98fc4",
+        "outputId": "94e14d03-fcea-4dca-81e2-ec8cd47ec425",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1637,11 +1637,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "f57bd746-dcbf-4433-8e24-ee213a8c34a1",
       "metadata": {
         "id": "f57bd746-dcbf-4433-8e24-ee213a8c34a1",
-        "outputId": "d1353e04-b938-4cf8-daa5-9b7dcd990e5e",
+        "outputId": "d9a2ea41-421e-4bc5-f31d-74a3e06933cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
